Add weather api and requests

--- a/client/index.html
+++ b/client/index.html
@@ -52,6 +52,7 @@
 
   <!-- React main JSX -->
   <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/services/weatherRequests.js"></script>
 </body>
 
 </html>
